--- a/source/open-fire-alarm.cbp
+++ b/source/open-fire-alarm.cbp
@@ -51,6 +51,10 @@
 		<Unit filename="Output.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Password.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Password.h" />
 		<Unit filename="Shell.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -58,6 +62,7 @@
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
