debeeg et integration de mylog

--- a/source/open-fire-alarm.cbp
+++ b/source/open-fire-alarm.cbp
@@ -59,6 +59,7 @@
 		<Unit filename="Mylog.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Mylog.h" />
 		<Unit filename="Options_menu.c">
 			<Option compilerVar="CC" />
 		</Unit>
