--- a/source/open-fire-alarm.cbp
+++ b/source/open-fire-alarm.cbp
@@ -42,6 +42,10 @@
 		<Unit filename="Extraction.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Help.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Help.h" />
 		<Unit filename="Init.c">
 			<Option compilerVar="CC" />
 		</Unit>
