ajout de automatic_loop()

--- a/source/open-fire-alarm.cbp
+++ b/source/open-fire-alarm.cbp
@@ -35,6 +35,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="Alarm.h" />
+		<Unit filename="Automatic_loop.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Automatic_loop.h" />
 		<Unit filename="Display.c">
 			<Option compilerVar="CC" />
 		</Unit>
