les premiers inputs et extractions

--- a/source/open-fire-alarm.cbp
+++ b/source/open-fire-alarm.cbp
@@ -46,6 +46,7 @@
 		<Unit filename="Extraction.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Extraction.h" />
 		<Unit filename="Help.c">
 			<Option compilerVar="CC" />
 		</Unit>
