ajout de automatic_loop_microprocessor() pour le portage

--- a/source/open-fire-alarm.cbp
+++ b/source/open-fire-alarm.cbp
@@ -58,6 +58,7 @@
 		<Unit filename="Input.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Input.h" />
 		<Unit filename="Main.c">
 			<Option compilerVar="CC" />
 		</Unit>
