--- a/source/open-fire-alarm.cbp
+++ b/source/open-fire-alarm.cbp
@@ -77,6 +77,7 @@
 		<Unit filename="Output.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Output.h" />
 		<Unit filename="Password.c">
 			<Option compilerVar="CC" />
 		</Unit>
