ajout de mygetchar + pour stop automatic_loop_microprocessor() on n utilise plus E2 mais mygetchar

--- a/source/open-fire-alarm.cbp
+++ b/source/open-fire-alarm.cbp
@@ -66,6 +66,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="MyTime.h" />
+		<Unit filename="Mygetchar.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Mygetchar.h" />
 		<Unit filename="Mylog.c">
 			<Option compilerVar="CC" />
 		</Unit>
